--- a/index.html
+++ b/index.html
@@ -10,28 +10,63 @@
 
 <body>
 
+	<style>
+		body {
+			font-family: monospace;
+		}
+	</style>
+
 	<noscript>
 		<h2 style="color:red">This page requires javascript.</h2>
 	</noscript>
 
 
-	<h1>Henry 2 LFS Script</h1>
+	<h1>Henry 2 LFS Script Gen</h1>
 
+	<h3>Resources</h3>
 
-	<label>Number of cores: </label>
-	<input type="number" value="2" min="1" max="10000">
+	<label>number of processors: </label>
+	<input id="coreNum" type="number" value="2" min="1" max="10000">
 	<br>
 	<br>
 
 
-	<label>Maximum job duration: </label>
-	<input type="number" value="0" min="0" max="6000">
-	<label>minutes</label>
+	<label>memory per core: </label>
+	<input id="memSize" type="number" value="10" min="1" max="10000">
+	<select name="memorySize" id="memUnit">
+		<option>MB</option>
+		<option>GB</option>
+		<option>TB</option>
+	</select>
+
+	<!-- With JS enabled will say "Total requested memory is X." -->
+	<p id="totalMemRes"></p>
+
+	<h3>Limits</h3>
+
+	<h4>It is important to set limits to prevent rogue tasks from using up resources.</h4>
+
+	<input class="toggleLimit" type="checkbox" checked>
+	<span class="limit">
+		<label>limit job duration to </label>
+		<input type="number" value="30" min="0" max="6000">
+		<select name="duration" id="WallTime">
+			<option selected>minutes</option>
+			<option>hours</option>
+			<option>days</option>
+		</select>
+	</span>
 	<br>
 
-	<label>No time limit </label>
-	<input type="checkbox">
+	<h3>Output</h3>
 
+	<label>job standard out</label>
+	<input value="./proj1/log/out.%J">
+	<br>
+	<br>
+
+	<label>job error out</label>
+	<input value="./proj1/log/err.%J">
 	<br>
 	<br>
 
@@ -40,6 +75,8 @@
 	</button>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="delegate.js"></script>
+	<!-- <script src="LFSGen.js"></script> -->
 </body>
 
 </html>
