-select between clusters (all but henry2 unimplemeted) -step = 1 for core num

--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
 	</noscript>
 
 
-	<h1>Henry 2 LFS Script Gen (For Python Jobs)</h1>
+	<h1>HPC Config Script Gen</h1>
 
 	<h3>Resources</h3>
 
+	<label>cluster</label>
+	<select id="" name="clusterName">
+		<option selected>Henry2 -- NCSU</option>
+		<option>KillDevil -- UNCCH</option>
+		<option>Longleaf -- UNCCH</option>
+	</select>
+	<br>
+	<br>
+
 	<label>number of processors: </label>
-	<input id="coreNum" type="number" value="2" min="1" max="10000">
+	<input id="coreNum" type="number" value="2" min="1" max="10000" step="1">
 	<br>
 	<br>
 
@@ -69,9 +78,9 @@
 	<input id="stderr" value="./proj1/log/err.%J">
 	<br>
 
-	<h3>Script</h3>
+	<h3>Process</h3>
 
-	<label>path to script</label>
+	<label>path to executable</label>
 	<input id="script" value="./proj1/code/test.py">
 	<br>
 	<br>
